--- a/Astronomy/Astronomy/Base.lproj/Main.storyboard
+++ b/Astronomy/Astronomy/Base.lproj/Main.storyboard
@@ -1,24 +1,148 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oTH-fH-DU4">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Photos Collection View Controller-->
+        <scene sceneID="DHI-Km-WAK">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <collectionViewController id="0c9-Zz-rtm" customClass="PhotosCollectionViewController" customModule="Astronomy" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Ezq-P8-f7c">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xby-Id-HEw">
+                            <size key="itemSize" width="128" height="128"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCell" id="p0D-9n-yoY">
+                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Dz5-hT-ixZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rtu-vF-2a3">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="rtu-vF-2a3" firstAttribute="leading" secondItem="Dz5-hT-ixZ" secondAttribute="leading" id="3vy-LY-PWQ"/>
+                                        <constraint firstAttribute="trailing" secondItem="rtu-vF-2a3" secondAttribute="trailing" id="CUv-fe-aUY"/>
+                                        <constraint firstItem="rtu-vF-2a3" firstAttribute="top" secondItem="Dz5-hT-ixZ" secondAttribute="top" id="hju-8N-Oyb"/>
+                                        <constraint firstAttribute="bottom" secondItem="rtu-vF-2a3" secondAttribute="bottom" id="nWq-tU-uYy"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <connections>
+                                    <segue destination="uK0-Rc-Bdv" kind="show" identifier="ShowDetail" id="1f3-Wg-INK"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="0c9-Zz-rtm" id="TUu-Df-o3E"/>
+                            <outlet property="delegate" destination="0c9-Zz-rtm" id="BYt-s5-be9"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="Aba-Lo-LBK"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="41G-0y-H5J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="919" y="51"/>
+        </scene>
+        <!--Photo Detail View Controller-->
+        <scene sceneID="FGG-Cz-Wzk">
+            <objects>
+                <viewController id="uK0-Rc-Bdv" customClass="PhotoDetailViewController" customModule="Astronomy" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Fxa-zU-lns">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EiA-qg-XQw">
+                                <rect key="frame" x="0.0" y="88" width="414" height="414"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="EiA-qg-XQw" secondAttribute="height" multiplier="1:1" id="jzJ-T8-GE4"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="If4-Qg-LZZ">
+                                <rect key="frame" x="12" y="510" width="390" height="87"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Detail Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5vN-qW-lIb">
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="caF-oK-kgT">
+                                        <rect key="frame" x="0.0" y="28.5" width="390" height="20.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1jr-em-HFg">
+                                                <rect key="frame" x="0.0" y="0.0" width="141.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8MB-vo-Mqw">
+                                                <rect key="frame" x="149.5" y="0.0" width="240.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nyy-mj-3mH">
+                                        <rect key="frame" x="0.0" y="57" width="390" height="30"/>
+                                        <state key="normal" title="Save to photo library"/>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="nyy-mj-3mH" firstAttribute="centerX" secondItem="If4-Qg-LZZ" secondAttribute="centerX" id="fNY-eU-zpR"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="If4-Qg-LZZ" firstAttribute="top" secondItem="EiA-qg-XQw" secondAttribute="bottom" constant="8" id="2lL-7b-NUx"/>
+                            <constraint firstItem="1QE-b8-hlP" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="If4-Qg-LZZ" secondAttribute="bottom" constant="10" id="AJa-0Z-rDf"/>
+                            <constraint firstItem="1QE-b8-hlP" firstAttribute="trailing" secondItem="If4-Qg-LZZ" secondAttribute="trailing" constant="12" id="Dd5-O2-22b"/>
+                            <constraint firstItem="If4-Qg-LZZ" firstAttribute="leading" secondItem="1QE-b8-hlP" secondAttribute="leading" constant="12" id="Lis-kF-Hf5"/>
+                            <constraint firstItem="1QE-b8-hlP" firstAttribute="trailing" secondItem="EiA-qg-XQw" secondAttribute="trailing" id="iad-aI-oNN"/>
+                            <constraint firstItem="EiA-qg-XQw" firstAttribute="top" secondItem="1QE-b8-hlP" secondAttribute="top" id="mcj-eI-lIt"/>
+                            <constraint firstItem="EiA-qg-XQw" firstAttribute="leading" secondItem="1QE-b8-hlP" secondAttribute="leading" id="zNJ-Il-c6H"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="1QE-b8-hlP"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="sAI-xw-WkB"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cdv-j2-dz7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1658" y="51"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="FfO-W8-G1P">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="oTH-fH-DU4" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iM9-Mx-izD">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="0c9-Zz-rtm" kind="relationship" relationship="rootViewController" id="Rbc-ZW-wju"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YtE-cR-4dY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="179.71014492753625" y="50.892857142857139"/>
         </scene>
     </scenes>
 </document>
