--- a/Astronomy in OBJC/Astronomy in OBJC/Base.lproj/Main.storyboard
+++ b/Astronomy in OBJC/Astronomy in OBJC/Base.lproj/Main.storyboard
@@ -23,14 +23,26 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RoverPicsCell" id="mDx-v2-pSY">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RoverPicsCell" id="mDx-v2-pSY" customClass="RoverCollectionViewCell">
                                 <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="HTN-uM-Bhe">
                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="F4W-2V-5J1">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="F4W-2V-5J1" secondAttribute="bottom" id="LLg-Kj-xqA"/>
+                                        <constraint firstItem="F4W-2V-5J1" firstAttribute="leading" secondItem="HTN-uM-Bhe" secondAttribute="leading" id="RBq-j3-jKe"/>
+                                        <constraint firstAttribute="trailing" secondItem="F4W-2V-5J1" secondAttribute="trailing" id="guh-ZL-FL5"/>
+                                        <constraint firstItem="F4W-2V-5J1" firstAttribute="top" secondItem="HTN-uM-Bhe" secondAttribute="top" id="ihX-re-plV"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
                                 <connections>
+                                    <outlet property="imageView" destination="F4W-2V-5J1" id="vvM-Xa-SXi"/>
                                     <segue destination="BYZ-38-t0r" kind="show" id="rql-Px-riE"/>
                                 </connections>
                             </collectionViewCell>
