--- a/OBJCAstronomyProject/OBJCAstronomyProject/Base.lproj/Main.storyboard
+++ b/OBJCAstronomyProject/OBJCAstronomyProject/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Photo Collection Collection View Controller-->
+        <!--sol-->
         <scene sceneID="eko-G4-gMY">
             <objects>
                 <collectionViewController id="BDg-rj-6s1" customClass="PhotoCollectionCollectionViewController" customModule="OBJCAstronomyProject" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,32 +19,33 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="TEw-ec-RvC">
-                            <size key="itemSize" width="197" height="197"/>
+                            <size key="itemSize" width="186" height="189"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="Oeh-iE-LvI" customClass="CollectionViewCell" customModule="OBJCAstronomyProject" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="197" height="197"/>
+                                <rect key="frame" x="0.0" y="0.0" width="186" height="189"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Jg7-tx-xHM">
-                                    <rect key="frame" x="0.0" y="0.0" width="197" height="197"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="186" height="189"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarsPlaceholder" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MqJ-ic-Pfw">
-                                            <rect key="frame" x="0.0" y="0.0" width="197" height="197"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="186" height="189"/>
                                         </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="top" secondItem="Jg7-tx-xHM" secondAttribute="top" id="5ms-GJ-LzU"/>
-                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="leading" secondItem="Jg7-tx-xHM" secondAttribute="leading" id="Uok-Bt-m3x"/>
-                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="centerY" secondItem="Jg7-tx-xHM" secondAttribute="centerY" id="Xv6-Qq-mgU"/>
-                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="centerX" secondItem="Jg7-tx-xHM" secondAttribute="centerX" id="nT9-hV-7q3"/>
+                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="top" secondItem="Jg7-tx-xHM" secondAttribute="top" id="bCO-u6-YPI"/>
+                                        <constraint firstAttribute="trailing" secondItem="MqJ-ic-Pfw" secondAttribute="trailing" id="jfi-h7-jIZ"/>
+                                        <constraint firstAttribute="bottom" secondItem="MqJ-ic-Pfw" secondAttribute="bottom" id="uXQ-SP-TkE"/>
+                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="leading" secondItem="Jg7-tx-xHM" secondAttribute="leading" id="ujz-nw-TIh"/>
                                     </constraints>
                                 </collectionViewCellContentView>
                                 <color key="backgroundColor" systemColor="systemRedColor"/>
-                                <size key="customSize" width="197" height="197"/>
+                                <edgeInsets key="layoutMargins" top="8" left="14" bottom="8" right="8"/>
+                                <size key="customSize" width="186" height="189"/>
                                 <connections>
                                     <outlet property="photoCollectionViewCell" destination="MqJ-ic-Pfw" id="yzU-dv-c5F"/>
                                     <segue destination="jyZ-6m-pV9" kind="show" id="N2u-0F-lcN"/>
@@ -56,7 +57,10 @@
                             <outlet property="delegate" destination="BDg-rj-6s1" id="qrH-gq-7ce"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="iI4-F7-JHN"/>
+                    <navigationItem key="navigationItem" title="sol" id="iI4-F7-JHN">
+                        <barButtonItem key="leftBarButtonItem" title="&lt;" id="1QN-A4-cRf"/>
+                        <barButtonItem key="rightBarButtonItem" title="&gt;" id="pKU-NI-3c6"/>
+                    </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LpD-46-BAf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
